force-app/main/default/objects/Invoice__c/fields/AccountReference__c.field-meta.xml
<CustomField>
    <fullName>AccountReference__c</fullName>
    <label>Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>