force-app/main/default/objects/Invoice__c/fields/ar1_cus_sup__c.field-meta.xml
<CustomField>
    <fullName>ar1_cus_sup__c</fullName>
    <label>ar1_cus_sup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>