force-app/main/default/objects/Invoice__c/fields/Aroper__c.field-meta.xml
<CustomField>
    <fullName>Aroper__c</fullName>
    <label>Aroper</label>
    <length>255</length>
    <type>Text</type>
</CustomField>