force-app/main/default/objects/Invoice__c/fields/Array__c.field-meta.xml
<CustomField>
    <fullName>Array__c</fullName>
    <label>Array</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>