force-app/main/default/objects/Invoice__c/fields/ConvFactor__c.field-meta.xml
<CustomField>
    <fullName>ConvFactor__c</fullName>
    <label>Conv Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>