force-app/main/default/objects/Invoice__c/fields/CoSite__c.field-meta.xml
<CustomField>
    <fullName>CoSite__c</fullName>
    <label>Co Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HW</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>