force-app/main/default/objects/Invoice__c/fields/CrInsur__c.field-meta.xml
<CustomField>
    <fullName>CrInsur__c</fullName>
    <label>Cr Insur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>