force-app/main/default/objects/Invoice__c/fields/DateDueText__c.field-meta.xml
<CustomField>
    <fullName>DateDueText__c</fullName>
    <label>Date Due Text</label>
    <type>Date</type>
</CustomField>