force-app/main/default/objects/Invoice__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOMEST</fullName>
            </value>
            <value>
                <fullName>EXPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>