force-app/main/default/objects/Invoice__c/fields/InvoiceUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceUpdateDate__c</fullName>
    <label>Invoice Update Date</label>
    <type>DateTime</type>
</CustomField>