force-app/main/default/objects/Invoice__c/fields/LoadQuantity__c.field-meta.xml
<CustomField>
    <fullName>LoadQuantity__c</fullName>
    <label>Load Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>