force-app/main/default/objects/Invoice__c/fields/NonApproved__c.field-meta.xml
<CustomField>
    <fullName>NonApproved__c</fullName>
    <label>Non Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>