force-app/main/default/objects/Invoice__c/fields/PastDue16_30__c.field-meta.xml
<CustomField>
    <fullName>PastDue16_30__c</fullName>
    <label>Past Due 16-30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>