force-app/main/default/objects/Invoice__c/fields/PastDue1_15__c.field-meta.xml
<CustomField>
    <fullName>PastDue1_15__c</fullName>
    <label>Past Due 1 - 15</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>