force-app/main/default/objects/Invoice__c/fields/PastDue31_60__c.field-meta.xml
<CustomField>
    <fullName>PastDue31_60__c</fullName>
    <label>Past Due 31-60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>