force-app/main/default/objects/Invoice__c/fields/PastDueover60__c.field-meta.xml
<CustomField>
    <fullName>PastDueover60__c</fullName>
    <label>Past Due over60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>