force-app/main/default/objects/Invoice__c/fields/PerLB__c.field-meta.xml
<CustomField>
    <fullName>PerLB__c</fullName>
    <label>Per LB</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>