force-app/main/default/objects/Invoice__c/fields/ProductCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeDescription__c</fullName>
    <label>Product Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>