force-app/main/default/objects/Invoice__c/fields/Rec_Type__c.field-meta.xml
<CustomField>
    <fullName>Rec_Type__c</fullName>
    <label>Rec Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>