force-app/main/default/objects/Invoice__c/fields/SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson__c</fullName>
    <label>Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>