force-app/main/default/objects/Invoice__c/fields/ShortNameMTMS__c.field-meta.xml
<CustomField>
    <fullName>ShortNameMTMS__c</fullName>
    <label>Short Name (MTMS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>