force-app/main/default/objects/Invoice__c/fields/SLoad__c.field-meta.xml
<CustomField>
    <fullName>SLoad__c</fullName>
    <label>Sales Load</label>
    <length>255</length>
    <type>Text</type>
</CustomField>