force-app/main/default/objects/Invoice__c/fields/SName__c.field-meta.xml
<CustomField>
    <fullName>SName__c</fullName>
    <label>S Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>