force-app/main/default/objects/Invoice__c/fields/SOLine__c.field-meta.xml
<CustomField>
    <fullName>SOLine__c</fullName>
    <label>SO Line</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>