force-app/main/default/objects/Invoice__c/fields/SOrder__c.field-meta.xml
<CustomField>
    <fullName>SOrder__c</fullName>
    <label>S Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>