force-app/main/default/objects/Invoice__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>CAFD</fullName>
            </value>
            <value>
                <fullName>LC</fullName>
            </value>
            <value>
                <fullName>OPEN</fullName>
            </value>
            <value>
                <fullName>PREPAY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>