force-app/main/default/objects/Invoice__c/fields/Terms_Days__c.field-meta.xml
<CustomField>
    <fullName>Terms_Days__c</fullName>
    <label>Terms Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>